# mold-web

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  build.rs  draft.txt  justfile  layout.html  make_favicon.sh
assets/src/img/: logo.ase  logo.svg.bak
compose/: compose.yaml  nginx.conf
data/: particles.js  style.css
frontend/: .stylelintrc  package-lock.json  package.json  postcss.config.js  webpack.config.js
frontend/src/styles/: fonts.scss  palette.scss  style.scss
frontend/static/: style.css
src/: config.rs  cookies.rs  error.rs  main.rs  main_old.rs  middleware.rs  static_res.rs
src/js/: mod.rs
src/markup/: base.rs  e404.rs  icons.rs  index.rs  mod.rs
src/markup/article/: about_mold_web.rs  long_time_not_seen.rs  mod.rs
