[package]
edition = "2018"
name = "mold-web"
version = "0.1.0"
authors = ["Vitalik Stepchik <vitalatron@gmail.com>"]
include = ["data/**"]

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-web-static-files = "4"
static-files = "0.2.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
maud = { version = "0.25", features = ["actix-web"] }
mime_guess = "2.0.3"
phf = { version = "0.11", features = ["macros"] }
includedir = "0.6"
bytes = "1.1"
log = "0.4.14"
env_logger = "0.10"

[build-dependencies]
static-files = "0.2.1"
includedir_codegen = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
