[package]
edition = "2018"
name = "mold-web"
version = "0.2.0"
authors = ["Vitalik Stepchik <vitalatron@gmail.com>"]

[dependencies]
actix-web = { version = "4" }
actix-web-static-files = "4"
clap = { version = "4.4", features = ["derive"] }
static-files = "0.2.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
maud = { version = "0.25", features = ["actix-web"] }
phf = { version = "0.11", features = ["macros"] }
includedir = "0.6"
bytes = "1.1"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
static-files = "0.2.1"
includedir_codegen = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
